tests/test129.rael.exp
Error [tests/test129.rael:5:8]: Invalid operation (+) on types
| log {} + :do_blame()
|        ^
